[package]
name = "copy_confirmer"
version = "0.0.1"
edition = "2021"
description = "Confirms all files are copied somewhere."
rust-version = "1.64"
license = "AGPL-3.0-or-later"
keywords = ["copy", "directory","duplicate", "cli"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
repository = "https://github.com/jm-fn/duplicate-destroyer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
blake2 = "0"
threadpool = "1"
indicatif = "0.17"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
