[package]
name = "copy_confirmer"
version = "0.0.2"
edition = "2021"
description = "Confirms all files are copied somewhere."
rust-version = "1.64"
license = "AGPL-3.0-or-later"
keywords = ["copy", "directory","duplicate", "cli"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
repository = "https://github.com/jm-fn/duplicate-destroyer"

[dependencies]
walkdir = "2"
blake2 = "0"
threadpool = "1"
indicatif = "0.17"
clap = { version = "4.1.8", features = ["derive"], optional = true }
colored = { version = "2.0.0", optional = true }
log = "0"
env_logger = "0.10.0"
serde_json = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }



[features]
cli = ["clap", "colored"]

[[bin]]
name = "copcon"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "copy_confirmer"
path = "src/lib.rs"
